--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html,
 body {
   height: 100%;
   width: 100%;
-  font-family: Arial, sans-serif;
+  font-family: "Noto Sans Korean", sans-serif;
 }
 #root {
   height: 100%;
