--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #f9f9f9;
+  background-color: white;
 }
 
 /* body {
