--- a/src/features/login/css/loginPage.css
+++ b/src/features/login/css/loginPage.css
@@ -1,6 +1,7 @@
 .login_form_container{
     font-family: "Noto Sans KR", sans-serif;
     width: 1200px;
+    margin: auto;
 }
 .login_form_content{
     margin: 60px auto 160px auto;
@@ -144,6 +145,7 @@
     font-size: 16px;
     font-weight: 700;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 /* 이메일 가입, 이메일 찾기, 비밀번호 찾기 */
