--- a/src/features/home/css/homeTop.css
+++ b/src/features/home/css/homeTop.css
@@ -1,17 +1,53 @@
 .home_top_container{
-    max-width: 1280px;
-    min-width: 960px;
     width: 100%;
-    height: 45px;
+    border-bottom: 1px solid rgba(0,0,0,0.1);
+    position: fixed;
+    z-index: 1000;
+    top: 86px;
+    background-color: white;
+}
+.home_top_content{
+    width: 1200px;
     margin: auto;
-    padding-left: 40px;
-    padding-right: 40px;
+    height: 45px;
     display: flex;
 }
 
-.home_top_first_subject_content{
+.home_top_first_subject_none_content{
     font-size: 16px;
     line-height: 1.25;
-    color: rgb(186, 17, 26);
     padding-top: 15px;
+    letter-spacing: -1px;
+    color: #222;
+    cursor: pointer;
+}
+.home_top_first_subject_content{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.25;
+    padding-top: 15px;
+    letter-spacing: -1px;
+    color: #222;
+    cursor: pointer;
+    border-bottom: 2px solid #222;
+}
+.home_top_subject_none_content{
+    font-size: 16px;
+    line-height: 1.25;
+    padding-top: 15px;
+    letter-spacing: -1px;
+    margin-left: 24px;
+    color: #222;
+    cursor: pointer;
+}
+.home_top_subject_content{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.25;
+    padding-top: 15px;
+    letter-spacing: -1px;
+    margin-left: 24px;
+    color: #222;
+    cursor: pointer;
+    border-bottom: 2px solid #222;
 }
