--- a/src/features/home/css/home/homeRecommend.css
+++ b/src/features/home/css/home/homeRecommend.css
@@ -1,6 +1,6 @@
 .home_recommend_container{
     width: 1200px;
-    margin: 40px auto auto auto;
+    margin: 40px auto 40px auto;
 }
 .home_recommend_title{
     color: #000;
