--- a/src/features/login/css/findPasswordPage.css
+++ b/src/features/login/css/findPasswordPage.css
@@ -7,16 +7,62 @@
 }
 
 /* 이메일 찾기 성공 */
+.find_password_form_success_title_content{
+    font-size: 24px;
+    border-bottom: 2px solid #000;
+    text-align: center;
+    font-weight: 700;
+    letter-spacing: -3px;
+    padding-top: 40px;
+    padding-bottom: 41px;
+}
+
+
+.find_password_form_success_info_content{
+    padding-top: 30px;
+    text-align: center;
+}
+.find_password_form_success_info_text{
+    font-size: 12px;
+    color: rgba(34, 34, 34, 0.5);
+}
+.find_password_form_success_info_email{
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 8px;
+}
+
+/* 비밀번호 찾기 및 로그인 버튼 */
+.find_password_form_success_btn_content{
+    padding-top: 56px;
+    display: flex;
+}
+.find_password_form_success_login_btn{
+    width: 396px;
+    height: 52px;
+    font-size: 16px;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #d3d3d3;
+    border-radius: 12px;
+    background-color: #222;
+    color: #fff;
+    letter-spacing: -1px;
+    cursor: pointer;
+}
+
 /* 공지 */
-.find_password_form_success_notice_content{
+/* .find_password_form_success_notice_content{
     text-align: center;
     font-size: 15px;
     letter-spacing: -1px;
     padding-top: 40px;
-}
+} */
 
 /* 버튼 */
-.find_password_form_success_btn_content{
+/* .find_password_form_success_btn_content{
     margin: 22px auto auto auto;
     width: 200px;
     height: 52px;
@@ -29,7 +75,7 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
-}
+} */
 
 
 
